fix modal modification activité
