# storage/api-docs/api-docs.json
@@ -319,6 +319,46 @@
                 }
             }
         },
+        "/examens/{id}/users": {
+            "get": {
+                "tags": [
+                    "Examens"
+                ],
+                "summary": "Récupérer les utilisateurs d'un examen",
+                "description": "Récupérer les utilisateurs d'un examen",
+                "operationId": "showExamenUsers",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
         "/promotions": {
             "get": {
                 "tags": [
